--- a/a1-student.ipynb
+++ b/a1-student.ipynb
@@ -818,7 +818,7 @@
         "2. The learner provides a rating from 1-4, and higher ratings indicate higher half-lifes.\n",
         "3. As in systems like Anki or Duolingo, you can generate large amounts of data that describe the mystery learner\u2019s recall probability under different conditions. You may analyze this data to understand its behavior, or use it to tune your model's parameters.\n",
         "\n",
-        "Your grade on this task will be the number in the `score` column of the computed metrics, which combines review/recall metrics into a single number. You will get `score * XX` points.\n",
+        "Your grade on this task will be the number in the `score` column of the computed metrics, which combines review/recall metrics into a single number. You will get `score * 25` points.\n",
         "\n",
         "**Getting started!** If you\u2019re not sure how to begin, here\u2019s a reasonable workflow:\n",
         "- Start with a simple baseline (e.g., Leitner-style doubling/halving of half-life) and confirm your model \u201cruns\u201d end-to-end.\n",
@@ -866,16 +866,6 @@
       "source": [
         "# TODO: add both to the existing scatterplot of schedules\n",
         "\n",
-        "# YOUR ANSWER HERE"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "e13d49e4-84a1-46fc-9b7a-97b6326716a2",
-      "metadata": {},
-      "outputs": [],
-      "source": [
         "# YOUR ANSWER HERE"
       ]
     },
