--- a/a1-student.ipynb
+++ b/a1-student.ipynb
@@ -21,12 +21,12 @@
         "\n",
         "To run the currently selected cell (you can do either of the following):\n",
         "- Press Shift + Enter\n",
-        "- Click the \u25b6 Run button in the toolbar\n",
+        "- Click the ▶ Run button in the toolbar\n",
         "  \n",
         "When a cell runs, its output appears directly below it. Make sure to save your progress as you go!\n",
         "\n",
         "To reset the notebook you can:\n",
-        "- Click Kernel \u2192 Restart Kernel\n",
+        "- Click Kernel → Restart Kernel\n",
         "\n",
         "**Run the follow 2 code blocks to setup the assignment and import the necessary libraries.**"
       ]
@@ -260,15 +260,14 @@
       "id": "9c82226d-1f5c-4dc5-b6f8-bbf1a5ca3960",
       "metadata": {},
       "source": [
-        "*You may notice what looks like a \u201csecond line\u201d of points below the main boxplots. These points are outliers identified by the boxplot visualization. Because each simulation samples a card of random difficulty, some cards are substantially harder than the median card and have much lower recall probabilities at a given time.*\n",
+        "*You may notice what looks like a “second line” of points below the main boxplots. These points are outliers identified by the boxplot visualization. Because each simulation samples a card of random difficulty, some cards are substantially harder than the median card and have much lower recall probabilities at a given time.*\n",
         "\n",
         "Answer the following questions:\n",
         "\n",
         "1. Describe the shape of the distribution. Are there tails or outliers? How does the shape reflect the fact that learners are reviewing cards of varying difficulty?\n",
-        "2. Compare the recall probabilities of a single learner with card difficulty of 4 (the first plot) with the distribution of 1000 learners with random card difficulties. How does the distribution look different?\n",
+        "2. Compare the recall probabilities of a single learner with card difficulty of 5 (the first plot) with the distribution of 1000 learners with random card difficulties. How does the distribution look different?\n",
         "3. Looking at the median of the boxplot, when would a learner's recall drop below 60%?\n",
-        "\n",
-        ""
+        "\n"
       ]
     },
     {
@@ -385,8 +384,7 @@
       "id": "910ec16a-1ba4-49d8-b0b0-c0d02b70b1ca",
       "metadata": {},
       "source": [
-        "*(your answer here)*\n",
-        ""
+        "*(your answer here)*\n"
       ]
     },
     {
@@ -449,7 +447,7 @@
         "\n",
         "# HINT: use sns.lineplot\n",
         "# To visualize variability over time, consider using a percentile interval rather than a boxplot. \n",
-        "# Seaborn\u2019s lineplot supports percentile intervals via the errorbar=(\"pi\", ...) option.\n",
+        "# Seaborn’s lineplot supports percentile intervals via the errorbar=(\"pi\", ...) option.\n",
         "\n",
         "# YOUR ANSWER HERE"
       ]
@@ -462,8 +460,7 @@
         "Answer the following question:\n",
         "Using the percentile interval shown in the plot, what is the approximate range of recall probabilities at the end of the year?\n",
         "\n",
-        "*(your answer here)*\n",
-        ""
+        "*(your answer here)*\n"
       ]
     },
     {
@@ -609,8 +606,7 @@
       "source": [
         "Answer the following questions:\n",
         "1. Which schedules are **strictly** outperformed by SM2, meaning they are objectively worse than SM2 in terms of our two metrics?\n",
-        "2. What is the difference between the performance of SM2 with and without the easiness factor? Why does removing the easiness factor cause this difference?\n",
-        ""
+        "2. What is the difference between the performance of SM2 with and without the easiness factor? Why does removing the easiness factor cause this difference?\n"
       ]
     },
     {
@@ -688,7 +684,7 @@
         "$$p = 2^{-\\Delta / h}$$\n",
         "\n",
         "Where $\\Delta$ is the change in time (`dt`), and $h$ is the *half-life* of the memory, i.e., the amount of time it takes for recall to drop by 50%. A key intuition is that larger half-life means a stronger memory: if h is larger, the exponent \n",
-        "\u2212\ud835\udc51\ud835\udc61/\u210e decreases in magnitude, so recall decays more slowly over time. This equation is represented by the `HalflifeLearner`:"
+        "−𝑑𝑡/ℎ decreases in magnitude, so recall decays more slowly over time. This equation is represented by the `HalflifeLearner`:"
       ]
     },
     {
@@ -816,23 +812,23 @@
         "\n",
         "1. A higher card difficulty leads to weaker memories (smaller half-life).\n",
         "2. The learner provides a rating from 1-4, and higher ratings indicate higher half-lifes.\n",
-        "3. As in systems like Anki or Duolingo, you can generate large amounts of data that describe the mystery learner\u2019s recall probability under different conditions. You may analyze this data to understand its behavior, or use it to tune your model's parameters.\n",
+        "3. As in systems like Anki or Duolingo, you can generate large amounts of data that describe the mystery learner’s recall probability under different conditions. You may analyze this data to understand its behavior, or use it to tune your model's parameters.\n",
         "\n",
         "Your grade on this task will be the number in the `score` column of the computed metrics, which combines review/recall metrics into a single number. You will get `score * 25` points.\n",
         "\n",
-        "**Getting started!** If you\u2019re not sure how to begin, here\u2019s a reasonable workflow:\n",
-        "- Start with a simple baseline (e.g., Leitner-style doubling/halving of half-life) and confirm your model \u201cruns\u201d end-to-end.\n",
+        "**Getting started!** If you’re not sure how to begin, here’s a reasonable workflow:\n",
+        "- Start with a simple baseline (e.g., Leitner-style doubling/halving of half-life) and confirm your model “runs” end-to-end.\n",
         "- Add one signal at a time (e.g., incorporate ratings, then incorporate an easiness factor, then incorporate time effects if desired).\n",
-        "- Evaluate often: after each change, rerun metrics on a small number of simulations (e.g., N=100) to get fast feedback, then increase to N=1000 when you\u2019re happy.\n",
+        "- Evaluate often: after each change, rerun metrics on a small number of simulations (e.g., N=100) to get fast feedback, then increase to N=1000 when you’re happy.\n",
         "- Tune parameters: adjust a small number of constants and re-evaluate.\n",
         "\n",
         "**Model design hints!**\n",
         "You have a lot of freedom here. Two common starting points are:\n",
         "- A) Easiness-factor (EF) models\n",
-        "    - Maintain a scalar \u201ceasiness\u201d that increases with higher ratings and decreases with lower ones, and use it to control how quickly the half-life grows or shrinks over time.\n",
+        "    - Maintain a scalar “easiness” that increases with higher ratings and decreases with lower ones, and use it to control how quickly the half-life grows or shrinks over time.\n",
         "- B) Rating-history models\n",
-        "    - Track how often each rating (1\u20134) occurs and compute the half-life as a weighted combination of those counts (optionally applying a nonlinearity to ensure \n",
-        "\u210e>0)."
+        "    - Track how often each rating (1–4) occurs and compute the half-life as a weighted combination of those counts (optionally applying a nonlinearity to ensure \n",
+        "ℎ>0)."
       ]
     },
     {
